--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+    <p>Contact me </p>
+    <ul>
+        <li>Email:xxxx@gmail.com</li>
+        <li>Phone:xxxxxxxx</li>
+    </ul>
 </body>
 
 </html>
