--- a/404.html
+++ b/404.html
@@ -5,10 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
+    <style>
+        body {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            display: inline;
+            background: rgb(15, 173, 221);
+        }
+        
+        h1 {
+            padding: 1rem 25rem;
+            font-size: 3rem;
+        }
+        
+        h4 {
+            padding: 1rem 25rem;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Error 404 </h1>
+
     <h4>Page Not Found</h4>
 
 </body>
