--- a/About.html
+++ b/About.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <style>
+        body {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: rgb(15, 173, 221);
+        }
+    </style>
 </head>
 
 <body>
     <h1>About page</h1>
-    <p>About me</p>
+
 </body>
 
 </html>
